--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
-  "name": "native_priority_queue",
-  "version": "1.0.0",
-  "main": "index.js",
-  "types": "index.d.ts",
-  "license": "MIT",
-  "scripts": {
-    "configure": "node-gyp configure",
-    "build": "node-gyp build",
-    "test": "ts-node ./test.ts"
-  },
-  "devDependencies": {
-    "node-gyp": "^3.7.0",
-    "ts-node": "^7.0.0",
-    "typescript": "^2.9.2"
-  },
-  "dependencies": {
-    "bindings": "^1.3.0"
-  }
+    "name": "native_priority_queue",
+    "version": "1.0.0",
+    "main": "index.js",
+    "types": "index.d.ts",
+    "license": "MIT",
+    "scripts": {
+        "configure": "node-gyp configure",
+        "build": "node-gyp build",
+        "test": "yarn build && mocha --opts ./mocha.opts"
+    },
+    "devDependencies": {
+        "@types/chai": "^4.1.4",
+        "@types/mocha": "^5.2.5",
+        "chai": "^4.1.2",
+        "mocha": "^5.2.0",
+        "node-gyp": "^3.7.0",
+        "ts-node": "^7.0.0",
+        "typescript": "^2.9.2"
+    },
+    "dependencies": {
+        "bindings": "^1.3.0"
+    },
+    "prettier": {
+        "printWidth": 140,
+        "tabWidth": 4
+    }
 }
