--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "scripts": {
         "configure": "node-gyp configure",
         "build": "node-gyp build",
-        "test": "yarn build && mocha --opts ./mocha.opts"
+        "test": "yarn build && mocha --opts ./mocha.opts",
+        "benchmark": "ts-node examples/benchmark.ts"
     },
     "devDependencies": {
         "@types/chai": "^4.1.4",
         "@types/mocha": "^5.2.5",
+        "@types/node": "^10.5.2",
         "chai": "^4.1.2",
         "mocha": "^5.2.0",
         "node-gyp": "^3.7.0",
+        "priorityqueuejs": "^1.0.0",
         "ts-node": "^7.0.0",
         "typescript": "^2.9.2"
     },
